[package]
name = "board_visualizer"
version = "0.1.0"
edition = "2021"
default-run = "board_visualizer"

[dependencies]
tokio-tungstenite = { version = "0.*", features = ["rustls-tls"] }
futures = "*"
futures-util = "*"
serde = { version = "1.0.202", features = ["derive"] }
tokio = { version = "1.37.0", features = ["full"] }
serde_json = "1.0.117"
reqwest = { version = "0.*", features = ["json", "blocking"] }
chrono = { version = "0.*", features = ["serde"] }
sha2 = "0.*"
hmac = "0.*"
itertools = "0.*"
hyper = "1.*"
url = "2.*"
log = "0.*"
simplelog = "0.*"
