[tool.poetry]
name = "board-visualizer"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
maturin = "^1.7.4"
numpy = "^2.1.1"
pandas = "^2.2.3"
matplotlib = "^3.9.2"
asyncio = "^3.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
