[tool.poetry]
name = "board-visualizer"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
maturin = "^1.7.4"
numpy = "^2.1.1"
pandas = "^2.2.3"
matplotlib = "^3.9.2"
asyncio = "^3.4.3"
google-cloud-bigquery = "^3.26.0"
notebook = "^7.2.2"
db-dtypes = "^1.3.0"
tqdm = "^4.66.5"
scikit-learn = "^1.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
