[package]
name = "board_fetcher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "board_fetcher"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.20.0"
tokio-tungstenite = { version = "0.*", features = ["rustls-tls"] }
futures = "*"
futures-util = "*"
serde = { version = "1.0.202", features = ["derive"] }
tokio = { version = "1.37.0", features = ["full"] }
serde_json = "1.0.117"
reqwest = { version = "0.*", features = ["json", "blocking"] }
chrono = { version = "0.*", features = ["serde"] }
sha2 = "0.*"
hmac = "0.*"
itertools = "0.*"
hyper = "1.*"
url = "2.*"
log = "0.*"
simplelog = "0.*"
pyo3-asyncio = { version = "0.20", features = ["attributes", "tokio-runtime"] }
